--- a/src/train_llama.ipynb
+++ b/src/train_llama.ipynb
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intento 2.5"
+    "## Intento 2.5 (Buena respuesta pero 7 mins)"
    ]
   },
   {
