Prueba de finetune

--- a/src/front.ipynb
+++ b/src/front.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:986: UserWarning: Expected 2 arguments for function <function greet at 0x000002CDFA6ECA40>, received 1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:990: UserWarning: Expected at least 2 arguments for function <function greet at 0x000002CDFA6ECA40>, received 1.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on local URL:  http://127.0.0.1:7866\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -25,7 +27,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -38,7 +40,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,12 +48,12 @@
    "source": [
     "import gradio as gr\n",
     "\n",
-    "def greet(name, intensity):\n",
-    "    return \"Hello, \" + name + \"!\" * int(intensity)\n",
+    "def greet(prospecto, pregunta):\n",
+    "    return \"Hello, \" + prospecto + \"!\" * int(pregunta)\n",
     "\n",
     "demo = gr.Interface(\n",
     "    fn=greet,\n",
-    "    inputs=[\"text\", \"slider\"],\n",
+    "    inputs=[\"image\"],\n",
     "    outputs=[\"text\"],\n",
     ")\n",
     "\n",
