Debido a problemas de memoria, vamos a descartar el avance del proyecto.

--- a/src/train_model.ipynb
+++ b/src/train_model.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:159: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\yera_\\.cache\\huggingface\\hub\\models--openbmb--MiniCPM-Llama3-V-2_5. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "A new version of the following files was downloaded from https://huggingface.co/openbmb/MiniCPM-Llama3-V-2_5:\n",
+      "- image_processing_minicpmv.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+      "A new version of the following files was downloaded from https://huggingface.co/openbmb/MiniCPM-Llama3-V-2_5:\n",
+      "- processing_minicpmv.py\n",
+      "- image_processing_minicpmv.py\n",
+      ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
       "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\transformers\\models\\auto\\image_processing_auto.py:513: FutureWarning: The image_processor_class argument is deprecated and will be removed in v4.42. Please use `slow_image_processor_class`, or `fast_image_processor_class` instead\n",
       "  warnings.warn(\n",
       "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\transformers\\models\\llama\\modeling_llama.py:603: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
@@ -190,11 +200,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El prospecto médico de la imagen proporciona información detallada sobre el medicamento Alprazolam, que es un fármaco perteneciente a la familia de los benzodiazepínicos. El medicamento se utiliza comúnmente para tratar síntomas de ansiedad y estrés. Antes de tomar este medicamento, es importante ser consciente de las precauciones, como no utilizarlo si se tiene alergia a Alprazolam o si se está tomando otros medicamentos que puedan interactuar con él. También se indica que el medicamento debe tomarse exactamente según las instrucciones del médico y no se debe sobredosis ni suspender repentinamente.\n",
+      "El prospecto médico en la imagen proporciona una variedad de detalles importantes sobre el medicamento. Aunque los textos están desenfocados, podemos identificar algunos puntos clave:\n",
       "\n",
-      "En cuanto a los efectos adversos, el prospecto menciona posibles reacciones secundarias como somnolencia, debilidad muscular, mareo, visión borrosa, fatiga, irritabilidad, ansiedad aumentada, depresión, confusión, problemas de memoria, alteraciones del lenguaje, problemas de coordinación, temblor, y en casos raros, pensamientos suicidas o intentos de suicidio. Es fundamental informar al médico de cualquier efecto adverso observado.\n",
+      "- El medicamento se refiere a un \"Alprazolam 0,25 mg compuesto por...\". Esto sugiere que el medicamento es un compuesto de alprazolam en una dosis de 0,25 mg.\n",
       "\n",
-      "Para la conservación del medicamento, se sugiere almacenarlo en un lugar seco y fresco, lejos de la luz directa y de los niños. Además, el prospecto incluye una sección de información adicional que podría contener detalles sobre interacciones medicamentosas, uso durante el embarazo y la lactancia, y otros aspectos importantes relacionados con el uso del medicamento.\n"
+      "- La indicación del medicamento se menciona como \"para el tratamiento de ansiedad y síndrome de estrés post-traumático (SST)\". Esto indica que el medicamento está destinado para ayudar con la ansiedad y el SST.\n",
+      "\n",
+      "- Las precauciones antes de tomar el medicamento incluyen \"no tomar si está alérgico a alprazolam o si tiene hipersensibilidad conocida a benzodiazepinas\". Esto alerta a los pacientes potenciales sobre posibles reacciones adversas o contraindicaciones.\n",
+      "\n",
+      "- La forma de administración no está claramente visible, pero generalmente, los benzodiazepínicos como el alprazolam se toman oralmente.\n",
+      "\n",
+      "- Los efectos adversos del medicamento se mencionan brevemente, aunque los detalles específicos no son discernibles debido al desenfoque.\n",
+      "\n",
+      "- La conservación del medicamento se menciona, pero los detalles exactos no son visibles.\n",
+      "\n",
+      "- Información adicional se proporciona, pero los detalles específicos no pueden ser determinados debido al desenfoque.\n",
+      "\n",
+      "Para obtener información detallada y precisa sobre el medicamento, se recomienda leer el prospecto médico completo o consultar a un profesional de la salud.\n"
      ]
     }
    ],
@@ -209,13 +231,6 @@
     ")\n",
     "print(res)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
