Nuevas pruebas para seleccionar un modelo adecuado

--- a/src/train_model.ipynb
+++ b/src/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,175 +45,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_path = \"../prospectos/train/alprazolan/alprazolan.JPG\"\n",
     "# Abre la imagen directamente desde la ruta\n",
     "image = Image.open(img_path)\n",
-    "prompt = 'Examina el prospecto médico de la imagen y enumera los detalles más importantes relacionados con: - Qué es el medicamento. - Para qué se utiliza el medicamento. - Precauciones antes de tomarlo. - Forma de tomarlo. - Efectos adversos del fármaco. - Conservación del fármaco. - Información adicional.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards: 100%|██████████| 7/7 [00:02<00:00,  2.67it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = AutoModel.from_pretrained('openbmb/MiniCPM-Llama3-V-2_5', trust_remote_code=True, torch_dtype=torch.float16)\n",
-    "model = model.to(device=device)"
+    "prompt = ('Examine the medical leaflet in the image and list the most important details related to: '\n",
+    "'- What the medicine is.' \n",
+    "'- What the medicine is used for.'\n",
+    "'- Precautions before taking it.'\n",
+    "' - Way to take it.'\n",
+    "'- Adverse effects of the drug. '\n",
+    "'- Conservation of the drug.'\n",
+    "'- Additional Information. '\n",
+    "'Finally, translate into Spanish.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MiniCPMV(\n",
-       "  (llm): LlamaForCausalLM(\n",
-       "    (model): LlamaModel(\n",
-       "      (embed_tokens): Embedding(128256, 4096)\n",
-       "      (layers): ModuleList(\n",
-       "        (0-31): 32 x LlamaDecoderLayer(\n",
-       "          (self_attn): LlamaSdpaAttention(\n",
-       "            (q_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "            (k_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
-       "            (v_proj): Linear(in_features=4096, out_features=1024, bias=False)\n",
-       "            (o_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "            (rotary_emb): LlamaRotaryEmbedding()\n",
-       "          )\n",
-       "          (mlp): LlamaMLP(\n",
-       "            (gate_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
-       "            (up_proj): Linear(in_features=4096, out_features=14336, bias=False)\n",
-       "            (down_proj): Linear(in_features=14336, out_features=4096, bias=False)\n",
-       "            (act_fn): SiLU()\n",
-       "          )\n",
-       "          (input_layernorm): LlamaRMSNorm()\n",
-       "          (post_attention_layernorm): LlamaRMSNorm()\n",
-       "        )\n",
-       "      )\n",
-       "      (norm): LlamaRMSNorm()\n",
-       "      (rotary_emb): LlamaRotaryEmbedding()\n",
-       "    )\n",
-       "    (lm_head): Linear(in_features=4096, out_features=128256, bias=False)\n",
-       "  )\n",
-       "  (vpm): Idefics2VisionTransformer(\n",
-       "    (embeddings): Idefics2VisionEmbeddings(\n",
-       "      (patch_embedding): Conv2d(3, 1152, kernel_size=(14, 14), stride=(14, 14), padding=valid)\n",
-       "      (position_embedding): Embedding(4900, 1152)\n",
-       "    )\n",
-       "    (encoder): Idefics2Encoder(\n",
-       "      (layers): ModuleList(\n",
-       "        (0-26): 27 x Idefics2EncoderLayer(\n",
-       "          (self_attn): Idefics2VisionAttention(\n",
-       "            (k_proj): Linear(in_features=1152, out_features=1152, bias=True)\n",
-       "            (v_proj): Linear(in_features=1152, out_features=1152, bias=True)\n",
-       "            (q_proj): Linear(in_features=1152, out_features=1152, bias=True)\n",
-       "            (out_proj): Linear(in_features=1152, out_features=1152, bias=True)\n",
-       "          )\n",
-       "          (layer_norm1): LayerNorm((1152,), eps=1e-06, elementwise_affine=True)\n",
-       "          (mlp): Idefics2VisionMLP(\n",
-       "            (activation_fn): PytorchGELUTanh()\n",
-       "            (fc1): Linear(in_features=1152, out_features=4304, bias=True)\n",
-       "            (fc2): Linear(in_features=4304, out_features=1152, bias=True)\n",
-       "          )\n",
-       "          (layer_norm2): LayerNorm((1152,), eps=1e-06, elementwise_affine=True)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (post_layernorm): LayerNorm((1152,), eps=1e-06, elementwise_affine=True)\n",
-       "  )\n",
-       "  (resampler): Resampler(\n",
-       "    (kv_proj): Linear(in_features=1152, out_features=4096, bias=False)\n",
-       "    (attn): MultiheadAttention(\n",
-       "      (out_proj): Linear(in_features=4096, out_features=4096, bias=True)\n",
-       "    )\n",
-       "    (ln_q): LayerNorm((4096,), eps=1e-06, elementwise_affine=True)\n",
-       "    (ln_kv): LayerNorm((4096,), eps=1e-06, elementwise_affine=True)\n",
-       "    (ln_post): LayerNorm((4096,), eps=1e-06, elementwise_affine=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained('openbmb/MiniCPM-Llama3-V-2_5', trust_remote_code=True)\n",
-    "model.eval()"
+    "bnb_cfg = BitsAndBytesConfig(\n",
+    "    load_in_4bit=True,\n",
+    "    bnb_4bit_compute_dtype=torch.float16,\n",
+    "    llm_int8_skip_modules=[\"mm_projector\", \"vision_model\"],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:42<00:00, 10.65s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "img_path = \"../prospectos/train/alprazolan/alprazolan.JPG\"\n",
-    "# Abre la imagen directamente desde la ruta\n",
-    "image = Image.open(img_path)\n",
-    "question = 'Examina el prospecto médico de la imagen y enumera los detalles más importantes relacionados con: - Qué es el medicamento. - Para qué se utiliza el medicamento. - Precauciones antes de tomarlo. - Forma de tomarlo. - Efectos adversos del fármaco. - Conservación del fármaco. - Información adicional.'\n",
-    "msgs = [{'role': 'user', 'content': question}]"
+    "model_id = \"qresearch/llama-3-vision-alpha-hf\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id,\n",
+    "    trust_remote_code=True,\n",
+    "    torch_dtype=torch.float16,\n",
+    "    quantization_config=bnb_cfg,\n",
+    ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    model_id,\n",
+    "    use_fast=True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\transformers\\models\\auto\\image_processing_auto.py:513: FutureWarning: The image_processor_class argument is deprecated and will be removed in v4.42. Please use `slow_image_processor_class`, or `fast_image_processor_class` instead\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\transformers\\models\\llama\\modeling_llama.py:603: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El prospecto médico de la imagen proporciona información detallada sobre el medicamento Alprazolam, que es un fármaco perteneciente a la familia de los benzodiazepínicos. El medicamento se utiliza comúnmente para tratar síntomas de ansiedad y estrés. Antes de tomar este medicamento, es importante ser consciente de las precauciones, como no utilizarlo si se tiene alergia a Alprazolam o si se está tomando otros medicamentos que puedan interactuar con él. También se indica que el medicamento debe tomarse exactamente según las instrucciones del médico y no se debe sobredosis ni suspender repentinamente.\n",
+      "Here is the translation of the medical leaflet into Spanish:\n",
       "\n",
-      "En cuanto a los efectos adversos, el prospecto menciona posibles reacciones secundarias como somnolencia, debilidad muscular, mareo, visión borrosa, fatiga, irritabilidad, ansiedad aumentada, depresión, confusión, problemas de memoria, alteraciones del lenguaje, problemas de coordinación, temblor, y en casos raros, pensamientos suicidas o intentos de suicidio. Es fundamental informar al médico de cualquier efecto adverso observado.\n",
+      "**¿Qué es este medicamento?**\n",
       "\n",
-      "Para la conservación del medicamento, se sugiere almacenarlo en un lugar seco y fresco, lejos de la luz directa y de los niños. Además, el prospecto incluye una sección de información adicional que podría contener detalles sobre interacciones medicamentosas, uso durante el embarazo y la lactancia, y otros aspectos importantes relacionados con el uso del medicamento.\n"
+      "Este medicamento es un [insert type of medication, e.g. antibiótico, antihistamínico, etc.] utilizado para tratar [insert condition or disease].\n",
+      "\n",
+      "**¿Para qué se utiliza este medicamento?**\n",
+      "\n",
+      "Se utiliza para tratar [insert condition or disease] y prevenir [insert complication or secondary condition].\n",
+      "\n",
+      "**¿Qué precauciones debo tomar antes de tomar este medicamento?**\n",
+      "\n",
+      "* [Insert precaution 1, e.g. inform your doctor if you have a history of allergies]\n",
+      "* [Insert precaution 2, e.g. avoid taking the medication with certain foods]\n",
+      "* [Insert precaution 3, e.g. inform your doctor if you are pregnant or breastfeeding]\n",
+      "\n",
+      "**¿Cómo debo tomar este medicamento?**\n",
+      "\n",
+      "* [Insert dosage instructions, e.g. take 1 tablet twice a day]\n",
+      "* [Insert administration instructions, e.g. swallow the tablet whole]\n",
+      "* [Insert duration of treatment, e.g. take the medication for 7 days]\n",
+      "\n",
+      "**¿Qué efectos secundarios pueden ocurrir como resultado de tomar este medicamento?**\n",
+      "\n",
+      "* [Insert potential side effects, e.g. dizziness, nausea, etc.]\n",
+      "* [Insert frequency of side effects, e.g. rare, common, etc.]\n",
+      "* [Insert what to do if side effects occur, e.g. contact your doctor]\n",
+      "\n",
+      "**¿Cómo puedo conservar este medicamento?**\n",
+      "\n",
+      "* [Insert storage instructions, e.g. store in a cool, dry place]\n",
+      "* [Insert expiration date, e.g. the medication expires after 6 months]\n",
+      "* [Insert what to do if the medication is no longer needed, e.g. return it to the pharmacy]\n",
+      "\n",
+      "**¿Hay alguna información adicional que deba saber sobre este medicamento?**\n",
+      "\n",
+      "* [Insert additional information, e.g. the medication may interact with other medications]\n",
+      "* [Insert any special considerations, e.g. the medication may not be suitable for certain individuals]\n",
+      "\n",
+      "Please note that this is just an example translation, and the actual text may vary depending on the specific medication and its intended use.\n"
      ]
     }
    ],
    "source": [
-    "res = model.chat(\n",
-    "    image=image,\n",
-    "    msgs=msgs,\n",
-    "    tokenizer=tokenizer,\n",
-    "    sampling=True, # if sampling=False, beam_search will be used by default\n",
-    "    temperature=0.1,\n",
-    "    # system_prompt='' # pass system_prompt if needed\n",
-    ")\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preparamos el Fine-Tunning"
+    "print(\n",
+    "    tokenizer.decode(\n",
+    "        model.answer_question(image, prompt, tokenizer),\n",
+    "        skip_special_tokens=True,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
