--- a/src/front.ipynb
+++ b/src/front.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:986: UserWarning: Expected 2 arguments for function <function greet at 0x000002CDFA6ECA40>, received 1.\n",
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:986: UserWarning: Expected 2 arguments for function <function greet at 0x00000132C19EFB00>, received 1.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:990: UserWarning: Expected at least 2 arguments for function <function greet at 0x000002CDFA6ECA40>, received 1.\n",
+      "c:\\Users\\yera_\\Documents\\Areas\\En proceso\\Qualentum-Proyectos\\ProspectAI\\ProspectAI\\.venv\\Lib\\site-packages\\gradio\\utils.py:990: UserWarning: Expected at least 2 arguments for function <function greet at 0x00000132C19EFB00>, received 1.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -19,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7866\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -27,7 +29,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -40,7 +42,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
