--- a/src/train_model.ipynb
+++ b/src/train_model.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "'- Adverse effects of the drug. '\n",
     "'- Conservation of the drug.'\n",
     "'- Additional Information. '\n",
-    "'Finally, translate into Spanish.')"
+    "'Finally, translate into Spanish')"
    ]
   },
   {
