Implementando streamlit para aportar el componente visual y utilizando Ollama

--- a/src/train_llama.ipynb
+++ b/src/train_llama.ipynb
@@ -1129,6 +1129,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Intento 14"
    ]
@@ -1158,6 +1163,25 @@
    "source": [
     "from transformers import AutoModel\n",
     "model = AutoModel.from_pretrained(\"OpenGVLab/Mini-InternVL-Chat-2B-V1-5\", trust_remote_code=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intento 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoProcessor, AutoModelForPreTraining\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(\"llava-hf/llama3-llava-next-8b-hf\")\n",
+    "model = AutoModelForPreTraining.from_pretrained(\"llava-hf/llama3-llava-next-8b-hf\")"
    ]
   }
  ],
